[project]
name = "mbm-wtf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langgraph>=1.0.3",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=5.24.0",
    "pyarrow>=22.0.0",
    "pyppeteer>=2.0.0",
    "snowflake>=1.8.0",
    "snowflake-connector-python[pandas,secure-local-storage]>=3.0.0",
    "streamlit>=1.50.0",
    "streamlit-aggrid>=1.2.0.post1",
    "xlrd>=2.0.2",
]
